changed web ui naming to HiveMQ Control center, updated related plugins

--- a/hivemq4/dns-image/Dockerfile
+++ b/hivemq4/dns-image/Dockerfile
@@ -7,8 +7,8 @@ ENV HIVEMQ_DNS_DISCOVERY_TIMEOUT 30
 
 # The default cluster transport bind port to use (UDP port)
 ENV HIVEMQ_CLUSTER_PORT 8000
-ENV HIVEMQ_WEB_UI_USER admin
-ENV HIVEMQ_WEB_UI_PASSWORD a68fc32fc49fc4d04c63724a1f6d0c90442209c46dba6975774cde5e5149caf8
+ENV HIVEMQ_CONTROL_CENTER_USER admin
+ENV HIVEMQ_CONTROL_CENTER_PASSWORD a68fc32fc49fc4d04c63724a1f6d0c90442209c46dba6975774cde5e5149caf8
 
 USER root
 
