--- a/hivemq4/dns-image/hivemq4-dns-cluster-discovery/dnsdiscovery.properties
+++ b/hivemq4/dns-image/hivemq4-dns-cluster-discovery/dnsdiscovery.properties
@@ -13,6 +13,6 @@
 #
 # -------------------------------------------------------------------------
 # The address to retrieve the DNS record of
-discoveryAddress:
+discoveryAddress=
 # The DNS resolution timeout in seconds. Note that this value should be lower than the reload interval configured in the HiveMQ configuration file.
-resolutionTimeout:30
+resolutionTimeout=30
