privilege step down permission adjustments

--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -1,28 +1,43 @@
 FROM openjdk:11-jre-slim
 
 ARG HIVEMQ_VERSION=4.0.0
-ARG HIVEMQ_GID=10000
-ARG HIVEMQ_UID=10000
+ENV HIVEMQ_GID=10000
+ENV HIVEMQ_UID=10000
 
 # Additional JVM options, may be overwritten by user
-#ENV JAVA_OPTS "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseNUMA"
+ENV JAVA_OPTS "-XX:+UnlockExperimentalVMOptions -XX:+UseNUMA"
 
-ENV JAVA_OPTS "-XX:+UnlockExperimentalVMOptions"
-
-# We use tini for proper signal propagation and a clean init
+# tini for proper signal propagation and a clean init
 ENV TINI_VERSION v0.18.0
+
+# gosu for root step-down to user-privileged process
+ENV GOSU_VERSION 1.11
 
 # Locale error fix, temporary
 ENV LANG=en_US.UTF-8
 
+# tini and gosu setup
 RUN set -x \
-    && apt-get update && apt-get install -y --no-install-recommends curl gpg dirmngr \
-    && curl -fSL "https://github.com/krallin/tini/releases/download/$TINI_VERSION/tini" -o /usr/local/bin/tini \
-    && chmod +x /usr/local/bin/tini \
-    && apt-get remove -y gpg dirmngr && rm -rf /var/lib/apt/lists/*
+        && apt-get update && apt-get install -y --no-install-recommends procps vim curl gpg-agent gpg dirmngr \
+        && curl -fSL "https://github.com/krallin/tini/releases/download/$TINI_VERSION/tini" -o /usr/local/bin/tini \
+        && curl -fSL "https://github.com/krallin/tini/releases/download/$TINI_VERSION/tini.asc" -o /usr/local/bin/tini.asc \
+        && curl -fSL "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture)" -o /usr/local/bin/gosu \
+        && curl -fSL "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$(dpkg --print-architecture).asc" -o /usr/local/bin/gosu.asc \
+        && export GNUPGHOME="$(mktemp -d)" \
+        && gpg --batch --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7 \
+        && gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
+        && gpg --batch --verify /usr/local/bin/tini.asc /usr/local/bin/tini \
+        && gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
+        && rm -r "$GNUPGHOME" /usr/local/bin/tini.asc /usr/local/bin/gosu.asc \
+        && { command -v gpgconf && gpgconf --kill all || :; } \
+        && chmod +x /usr/local/bin/tini \
+        && chmod +x /usr/local/bin/gosu \
+        && gosu nobody true \
+        && apt-get purge -y gpg dirmngr && rm -rf /var/lib/apt/lists/*
 
 COPY config.xml /opt/config.xml
 COPY logback.xml /opt/logback.xml
+COPY docker-entrypoint.sh /opt/docker-entrypoint.sh
 
 # HiveMQ setup
 RUN curl https://hivemq.com/releases-all/hivemq-${HIVEMQ_VERSION}.zip -o /opt/hivemq-${HIVEMQ_VERSION}.zip \
@@ -33,9 +48,8 @@ RUN curl https://hivemq.com/releases-all/hivemq-${HIVEMQ_VERSION}.zip -o /opt/hi
     && mv /opt/logback.xml /opt/hivemq-${HIVEMQ_VERSION}/conf/logback.xml \
     && groupadd --gid ${HIVEMQ_GID} hivemq \
     && useradd -g hivemq -d /opt/hivemq -s /bin/bash --uid ${HIVEMQ_UID} hivemq \
-    && chown -R hivemq:hivemq /opt/hivemq-${HIVEMQ_VERSION} \
-    && chmod -R 777 /opt \
-    && chmod +x /opt/hivemq/bin/run.sh
+    && chmod -R 775 /opt \
+    && chmod +x /opt/hivemq/bin/run.sh /opt/docker-entrypoint.sh
 
 # Substitute eval for exec and replace OOM flag if necessary (for older releases). This is necessary for proper signal propagation
 RUN sed -i -e 's|eval \\"java\\" "$HOME_OPT" "$JAVA_OPTS" -jar "$JAR_PATH"|exec "java" $HOME_OPT $JAVA_OPTS -jar "$JAR_PATH"|' /opt/hivemq/bin/run.sh && \
@@ -54,7 +68,6 @@ EXPOSE 1883
 EXPOSE 8080
 
 WORKDIR /opt/hivemq
-USER ${HIVEMQ_UID}
 
-ENTRYPOINT ["/usr/local/bin/tini", "-g", "--"]
+ENTRYPOINT ["/usr/local/bin/tini", "-g", "--", "/opt/docker-entrypoint.sh"]
 CMD ["/opt/hivemq/bin/run.sh"]
