--- a/hivemq4/dns-image/Dockerfile
+++ b/hivemq4/dns-image/Dockerfile
@@ -1,5 +1,6 @@
-ARG TAG=latest
-FROM hivemq4-base:${TAG}
+ARG BASEIMAGE=hivemq/hivemq4:latest
+
+FROM ${BASEIMAGE}
 
 # Use default DNS resolution timeout as default discovery interval
 ENV HIVEMQ_DNS_DISCOVERY_INTERVAL 31
@@ -10,8 +11,6 @@ ENV HIVEMQ_CLUSTER_PORT 8000
 ENV HIVEMQ_CONTROL_CENTER_USER admin
 ENV HIVEMQ_CONTROL_CENTER_PASSWORD a68fc32fc49fc4d04c63724a1f6d0c90442209c46dba6975774cde5e5149caf8
 
-USER root
-
 COPY config-dns.xml /opt/hivemq/conf/config.xml
 COPY docker-entrypoint.sh /opt/docker-entrypoint.sh
 
@@ -20,7 +19,6 @@ COPY hivemq4-dns-cluster-discovery/* /opt/hivemq/plugins/hivemq4-dns-cluster-dis
 
 RUN chown -R hivemq:hivemq /opt/hivemq
 RUN chmod +x /opt/docker-entrypoint.sh
-USER hivemq
 
 ENTRYPOINT ["/opt/docker-entrypoint.sh"]
 CMD ["/opt/hivemq/bin/run.sh"]
