--- a/hivemq4/prometheus-image/Dockerfile
+++ b/hivemq4/prometheus-image/Dockerfile
@@ -1,7 +1,6 @@
-ARG TAG=latest
-FROM hivemq4-base:${TAG}
+ARG BASEIMAGE=hivemq/hivemq4:latest
 
-USER root
+FROM ${BASEIMAGE}
 
 RUN mkdir /opt/hivemq/plugins/hivemq4-prometheus-monitoring-plugin
 COPY hivemq4-prometheus-monitoring-plugin/* /opt/hivemq/plugins/hivemq4-prometheus-monitoring-plugin/
@@ -10,8 +9,5 @@ COPY hivemq4-prometheus-monitoring-plugin/* /opt/hivemq/plugins/hivemq4-promethe
 EXPOSE 9399
 
 RUN chown -R hivemq:hivemq /opt/hivemq
-USER hivemq
 
 CMD ["/opt/hivemq/bin/run.sh"]
-
-
