--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -40,7 +40,7 @@ COPY logback.xml /opt/logback.xml
 COPY docker-entrypoint.sh /opt/docker-entrypoint.sh
 
 # HiveMQ setup
-RUN curl https://hivemq.com/releases-all/hivemq-${HIVEMQ_VERSION}.zip -o /opt/hivemq-${HIVEMQ_VERSION}.zip \
+RUN curl https://hivemq.com/releases/hivemq-${HIVEMQ_VERSION}.zip -o /opt/hivemq-${HIVEMQ_VERSION}.zip \
     && unzip /opt/hivemq-${HIVEMQ_VERSION}.zip  -d /opt/\
     && rm -f /opt/hivemq-${HIVEMQ_VERSION}.zip \
     && ln -s /opt/hivemq-${HIVEMQ_VERSION} /opt/hivemq \
