--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -21,7 +21,7 @@ RUN set -x \
         && export GNUPGHOME="$(mktemp -d)" \
         && gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
         && gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
-        && rm -r "$GNUPGHOME" /usr/local/bin/gosu.asc \
+        && rm -rf "$GNUPGHOME" /usr/local/bin/gosu.asc \
         && { command -v gpgconf && gpgconf --kill all || :; } \
         && chmod +x /usr/local/bin/gosu \
         && gosu nobody true \
