reduce build stages

--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -1,5 +1,19 @@
-FROM openjdk:11-jre-slim as javabase
+#Additional build image to unpack the zip file and change the permissions without retaining large layers just for those operations
+FROM busybox as unpack
 
+ARG HIVEMQ_VERSION
+
+COPY config.xml /opt/config.xml
+COPY hivemq-${HIVEMQ_VERSION}.zip /opt/hivemq-${HIVEMQ_VERSION}.zip
+RUN  unzip /opt/hivemq-${HIVEMQ_VERSION}.zip  -d /opt/ \
+     && rm -rf /opt/hivemq-${HIVEMQ_VERSION}/tools/hivemq-swarm \
+     && mv /opt/config.xml /opt/hivemq-${HIVEMQ_VERSION}/conf/config.xml \
+     && chgrp -R 0 /opt \
+     && chmod -R 770 /opt
+
+FROM openjdk:11-jre-slim
+
+ARG HIVEMQ_VERSION
 ENV HIVEMQ_GID=10000
 ENV HIVEMQ_UID=10000
 
@@ -36,38 +50,24 @@ RUN set -x \
         && { command -v gpgconf && gpgconf --kill all || :; } \
         && chmod +x /usr/local/bin/gosu \
         && gosu nobody true \
-        && apt-get purge -y gpg dirmngr && rm -rf /var/lib/apt/lists/*
+        && apt-get purge -y gpg dirmngr && rm -rf /var/lib/apt/lists/* \
+        && mkdir -p /docker-entrypoint.d
 
-
-#Additional build image to unpack the zip file and change the permissions without retaining large layers just for those operations
-FROM javabase as unpack
-
-ARG HIVEMQ_VERSION=4.0.0
-
+COPY --from=unpack /opt/hivemq-${HIVEMQ_VERSION} /opt/
 COPY config.xml /opt/config.xml
-COPY hivemq-${HIVEMQ_VERSION}.zip /opt/hivemq-${HIVEMQ_VERSION}.zip
-RUN  unzip /opt/hivemq-${HIVEMQ_VERSION}.zip  -d /opt/ \
-     && rm -rf /opt/hivemq-${HIVEMQ_VERSION}/tools/hivemq-swarm \
-     && mv /opt/config.xml /opt/hivemq-${HIVEMQ_VERSION}/conf/config.xml \
-     && chgrp -R 0 /opt \
-     && chmod -R 770 /opt
-
-FROM javabase
-
-ARG HIVEMQ_VERSION=4.0.0
-
-COPY --from=unpack /opt/hivemq-${HIVEMQ_VERSION} /opt/hivemq
 COPY docker-entrypoint.sh /opt/docker-entrypoint.sh
-COPY entrypoints.d/* /docker-entrypoint.d/
 
-RUN mkdir -p /docker-entrypoint.d \
+RUN ln -s /opt/hivemq-${HIVEMQ_VERSION} /opt/hivemq \
+    && mv /opt/config.xml /opt/hivemq-${HIVEMQ_VERSION}/conf/config.xml \
     && groupadd --gid ${HIVEMQ_GID} hivemq \
     && useradd -g hivemq -d /opt/hivemq -s /bin/bash --uid ${HIVEMQ_UID} hivemq \
+    && chgrp 0 /opt/hivemq-${HIVEMQ_VERSION}/conf/config.xml \
+    && chmod 770 /opt/hivemq-${HIVEMQ_VERSION}/conf/config.xml \
+    && chgrp 0 /opt/hivemq \
+    && chmod 770 /opt/hivemq \
     && chmod +x /opt/hivemq/bin/run.sh /opt/docker-entrypoint.sh
 
-# Substitute eval for exec and replace OOM flag if necessary (for older releases). This is necessary for proper signal propagation
-RUN sed -i -e 's|eval \\"java\\" "$HOME_OPT" "$JAVA_OPTS" -jar "$JAR_PATH"|exec "java" $HOME_OPT $JAVA_OPTS -jar "$JAR_PATH"|' /opt/hivemq/bin/run.sh && \
-    sed -i -e "s|-XX:OnOutOfMemoryError='sleep 5; kill -9 %p'|-XX:+CrashOnOutOfMemoryError|" /opt/hivemq/bin/run.sh
+COPY entrypoints.d/* /docker-entrypoint.d/
 
 # Make broker data persistent throughout stop/start cycles
 VOLUME /opt/hivemq/data
