--- a/hivemq4/dns-image/Dockerfile
+++ b/hivemq4/dns-image/Dockerfile
@@ -15,14 +15,13 @@ ENV HIVEMQ_CONTROL_CENTER_PASSWORD a68fc32fc49fc4d04c63724a1f6d0c90442209c46dba6
 ENV HIVEMQ_CLUSTER_TRANSPORT_TYPE UDP
 
 COPY config-dns.xml /opt/hivemq/conf/config.xml
+COPY pre-entry.sh /opt/pre-entry.sh
 
 RUN curl -L https://github.com/hivemq/hivemq-dns-cluster-discovery-extension/releases/download/${DNS_DISCOVERY_EXTENSION_VERSION}/hivemq-dns-cluster-discovery-${DNS_DISCOVERY_EXTENSION_VERSION}.zip -o /opt/hivemq/extensions/dns-discovery.zip \
     && unzip /opt/hivemq/extensions/dns-discovery.zip -d /opt/hivemq/extensions \
     && rm -f /opt/hivemq/extensions/hivemq-dns-cluster-discovery/*.png \
     && chgrp -R 0 /opt/hivemq/extensions/hivemq-dns-cluster-discovery \
     && chmod -R 770 /opt/hivemq/extensions/hivemq-dns-cluster-discovery \
-    && rm /opt/hivemq/extensions/dns-discovery.zip
-
-COPY pre-entry.sh /opt/pre-entry.sh
-
-RUN chmod +x /opt/pre-entry.sh && ln -s /opt/pre-entry.sh /docker-entrypoint.d/40_dns_entrypoint.sh
+    && rm /opt/hivemq/extensions/dns-discovery.zip \
+    && chmod +x /opt/pre-entry.sh \
+    && ln -s /opt/pre-entry.sh /docker-entrypoint.d/40_dns_entrypoint.sh
