update: Use latest changes to the image

--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -1,5 +1,5 @@
-ARG BASE_IMAGE=hivemq/hivemq4:dns-latest
-ARG HIVEMQ_VERSION=4.7.5
+ARG BASEIMAGE=hivemq/hivemq4:dns-latest
+ARG K8S_SYNC_EXTENSION_VERSION=1.0.0
 ARG PROMETHEUS_EXTENSION_VERSION=4.0.4
 
 FROM busybox as BUILD
@@ -16,11 +16,12 @@ ADD https://www.hivemq.com/releases/extensions/hivemq-prometheus-extension-"${PR
 RUN unzip hivemq-prometheus-extension.zip -d /opt/hivemq/extensions/hivemq-prometheus-extension \
     && rm hivemq-prometheus-extension.zip
 COPY prometheusConfiguration.properties /opt/hivemq/extensions/hivemq-prometheus-extension/
-## Clean image to distribute
-FROM ${BASE_IMAGE}
 
-ENV HIVEMQ_LOG_LEVEL INFO
-ENV HIVEMQ_CLUSTER_TRANSPORT_TYPE TCP
+## Clean image to distribute
+FROM ${BASEIMAGE}
+
+ENV HIVEMQ_LOG_LEVEL=INFO \ 
+    HIVEMQ_CLUSTER_TRANSPORT_TYPE=TCP
 
 COPY config.xml /opt/hivemq/conf/config.xml
 COPY scripts/*.sh /opt/hivemq/bin/
