improvement: add basic structure test

--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -3,7 +3,7 @@ ARG K8S_SYNC_EXTENSION_VERSION=1.0.0
 ARG PROMETHEUS_EXTENSION_VERSION=4.0.4
 
 FROM busybox as BUILD
-ARG HIVEMQ_VERSION
+ARG K8S_SYNC_EXTENSION_VERSION
 ARG PROMETHEUS_EXTENSION_VERSION
 
 WORKDIR /opt/hivemq/extensions
