--- a/hivemq4/k8s-image/structure-test.yml
+++ b/hivemq4/k8s-image/structure-test.yml
@@ -1,13 +1,13 @@
 schemaVersion: 2.0.0
 
 fileExistenceTests:
-  - name: hivemq  
+  - name: hivemq folder 
     path: /opt/hivemq
     shouldExist: true
-  - name: pre_entry
+  - name: pre-entry_1.sh 
     path: /opt/hivemq/bin/pre-entry_1.sh
     shouldExist: true
-  - name: run
+  - name: run.sh
     path: /opt/hivemq/bin/run.sh
     shouldExist: true
     isExecutableBy: any
@@ -24,3 +24,5 @@ metadataTest:
     - key: HIVEMQ_USE_NSS_WRAPPER
       value: true
   exposedPorts: ["1883","8000","8080"]
+  volumes: ["/opt/hivemq/data","/opt/hivemq/log"]
+  workdir: "/opt/hivemq"
