--- a/.github/workflows/docker-k8s-image.yml
+++ b/.github/workflows/docker-k8s-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 env:
   IMAGE_TAG: "hivemq/hivemq4-k8s:test"
