--- a/.github/workflows/docker-k8s-image.yml
+++ b/.github/workflows/docker-k8s-image.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Get K8s extension
-        run: wget https://www.hivemq.com/releases/extensions/hivemq-k8s-sync-extension-4.7.5.zip && pwd
+        run: cd ${working-directory} && wget https://www.hivemq.com/releases/extensions/hivemq-k8s-sync-extension-4.7.5.zip
       - name: Lint Dockerfile
         run: pwd && docker run --rm --interactive hadolint/hadolint < Dockerfile
       - name: Build the Docker image
