feature: Add lint support

--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -2,7 +2,7 @@ ARG BASEIMAGE=hivemq/hivemq4:dns-latest
 ARG K8S_SYNC_EXTENSION_VERSION=4.7.5
 ARG PROMETHEUS_EXTENSION_VERSION=4.0.4
 
-FROM busybox as BUILD
+FROM busybox:1.35.0 as BUILD
 ARG K8S_SYNC_EXTENSION_VERSION
 ARG PROMETHEUS_EXTENSION_VERSION
 
