--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -26,19 +26,20 @@ ENV HIVEMQ_LOG_LEVEL=INFO\
 COPY config.xml /opt/hivemq/conf/config.xml
 COPY scripts/*.sh /opt/hivemq/bin/
 COPY --from=BUILD /opt/hivemq/extensions/* /opt/hivemq/extensions/
+RUN cd /opt/hivemq/extensions/ && ls -la
 
 ### Move the entrypoint into the correct position & adjust for whether the base image uses entrypoint.d or not
 ### Fix permissions as --chmod on COPY is not really working at the moment and requires buildkit
-RUN rm /opt/hivemq/extensions/prometheusConfiguration.properties \
-    && chmod +x /opt/hivemq/bin/*.sh \
-    && if [ -d /docker-entrypoint.d ]; then \
+RUN rm /opt/hivemq/extensions/prometheusConfiguration.properties
+RUN  chmod +x /opt/hivemq/bin/*.sh
+RUN if [ -d /docker-entrypoint.d ]; then \
       mv /opt/hivemq/bin/pre-entry_1.sh /docker-entrypoint.d/15_k8s_entrypoint.sh && \
       ln -s /opt/docker-entrypoint.sh /opt/hivemq/bin/pre-entry_1.sh; \
     else \
       echo '# Pass on to DNS entrypoint' >> /opt/hivemq/bin/pre-entry_1.sh && \
       echo 'exec /opt/pre-entry.sh "$@"' >> /opt/hivemq/bin/pre-entry_1.sh; \
-    fi \
-    && chmod -R 770 /opt/hivemq/extensions/hivemq-k8s-sync-extension \
+    fi 
+RUN chmod -R 770 /opt/hivemq/extensions/hivemq-k8s-sync-extension \
     && chgrp -R 0 /opt/hivemq/extensions/hivemq-k8s-sync-extension \
     && chmod -R 770 /opt/hivemq/extensions/hivemq-prometheus-extension \
     && chgrp -R 0 /opt/hivemq/extensions/hivemq-prometheus-extension \
