--- a/.github/workflows/docker-k8s-image.yml
+++ b/.github/workflows/docker-k8s-image.yml
@@ -18,17 +18,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Get K8s extension
-        run: wget https://www.hivemq.com/releases/extensions/hivemq-k8s-sync-extension-4.7.5.zip
-        working-directory: ${{env.working-directory}}
+      #- name: Get K8s extension
+      #  run: wget https://www.hivemq.com/releases/extensions/hivemq-k8s-sync-extension-4.7.5.zip
+      #  working-directory: ${{env.working-directory}}
       - name: Lint Dockerfile
         run: docker run --rm -e HADOLINT_FAILURE_THRESHOLD=error --interactive hadolint/hadolint < Dockerfile
         working-directory: ${{env.working-directory}}
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag  "${IMAGE_TAG}"
-        working-directory: ${{env.working-directory}}
-      - name: Test Docker image
-        run: |
-          curl -LO https://storage.googleapis.com/container-structure-test/latest/container-structure-test-linux-amd64 && chmod +x container-structure-test-linux-amd64 && sudo mv container-structure-test-linux-amd64 /usr/local/bin/container-structure-test
-          container-structure-test test --config structure-test.yml --image "${IMAGE_TAG}"
-        working-directory: ${{env.working-directory}}
+      #- name: Build the Docker image
+      #  run: docker build . --file Dockerfile --tag  "${IMAGE_TAG}"
+      #  working-directory: ${{env.working-directory}}
+      #- name: Test Docker image
+      #  run: |
+      #    curl -LO https://storage.googleapis.com/container-structure-test/latest/container-structure-test-linux-amd64 && chmod +x container-structure-test-linux-amd64 && sudo mv container-structure-test-linux-amd64 /usr/local/bin/container-structure-test
+      #    container-structure-test test --config structure-test.yml --image "${IMAGE_TAG}"
+      #  working-directory: ${{env.working-directory}}
