using original values

--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -29,10 +29,12 @@ COPY scripts/*.sh /opt/hivemq/bin/
 COPY --from=BUILD /opt/hivemq/extensions/* /opt/hivemq/extensions/
 
 RUN if [ -d /docker-entrypoint.d ]; then \
-      echo '# Not Found' && mv /opt/hivemq/bin/pre-entry_1.sh /docker-entrypoint.d/15_k8s_entrypoint.sh; \
+      echo '# Not Found' && mv /opt/hivemq/bin/pre-entry_1.sh /docker-entrypoint.d/15_k8s_entrypoint.sh && \
+      ln -s /opt/docker-entrypoint.sh /opt/hivemq/bin/pre-entry_1.sh; \
     else \
-      echo '# Found'; \
-    fi 
+      echo '# Pass on to DNS entrypoint' >> /opt/hivemq/bin/pre-entry_1.sh && \
+      echo 'exec /opt/pre-entry.sh "$@"' >> /opt/hivemq/bin/pre-entry_1.sh; \
+    fi
 
 RUN rm /opt/hivemq/extensions/prometheusConfiguration.properties \
     && chmod +x /opt/hivemq/bin/*.sh \
