--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -28,7 +28,8 @@ COPY config.xml /opt/hivemq/conf/config.xml
 COPY scripts/*.sh /opt/hivemq/bin/
 COPY --from=BUILD /opt/hivemq/extensions/* /opt/hivemq/extensions/
 
-RUN if [ -d /docker-entrypoint.d ]; then \
+RUN ls /opt /opt/hivemq/bin/ && \
+    if [ -d /docker-entrypoint.d ]; then \
       echo '# Not Found' && mv /opt/hivemq/bin/pre-entry_1.sh /docker-entrypoint.d/15_k8s_entrypoint.sh && \
       ln -s /opt/docker-entrypoint.sh /opt/hivemq/bin/pre-entry_1.sh; \
     else \
