move out the mv step

--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -28,10 +28,9 @@ ENV HIVEMQ_CLUSTER_TRANSPORT_TYPE TCP
 COPY config.xml /opt/hivemq/conf/config.xml
 COPY scripts/*.sh /opt/hivemq/bin/
 COPY --from=BUILD /opt/hivemq/extensions/* /opt/hivemq/extensions/
-
-RUN ls /opt /opt/hivemq/bin/ && \
-    if [ -d /docker-entrypoint.d ]; then \
-      echo '# Not Found' && mv /opt/hivemq/bin/k8s_pre_entry.sh /docker-entrypoint.d/15_k8s_entrypoint.sh && \
+RUN mv /opt/hivemq/bin/k8s_pre_entry.sh /docker-entrypoint.d/16_k8s_entrypoint.sh
+RUN if [ -d /docker-entrypoint.d ]; then \
+      echo '# Not Found'  && \
       ln -s /opt/docker-entrypoint.sh /opt/hivemq/bin/k8s_pre_entry.sh; \
     else \
       echo '# Pass on to DNS entrypoint' >> /opt/hivemq/bin/k8s_pre_entry.sh && \
