--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -4,10 +4,10 @@ FROM busybox as unpack
 ARG HIVEMQ_VERSION
 
 COPY hivemq-${HIVEMQ_VERSION}.zip /opt/hivemq-${HIVEMQ_VERSION}.zip
-RUN  unzip /opt/hivemq-${HIVEMQ_VERSION}.zip  -d /opt/ \
-     && rm -rf /opt/hivemq-${HIVEMQ_VERSION}/tools/hivemq-swarm \
-     && chgrp -R 0 /opt \
-     && chmod -R 770 /opt
+RUN  unzip /opt/hivemq-${HIVEMQ_VERSION}.zip -d /opt/
+RUN rm -rf /opt/hivemq-${HIVEMQ_VERSION}/tools/hivemq-swarm
+RUN chgrp -R 0 /opt
+RUN chmod -R 770 /opt
 
 FROM openjdk:11-jre-slim
 
