--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -3,8 +3,8 @@ FROM busybox:1.36.1@sha256:6d9ac9237a84afe1516540f40a0fafdc86859b2141954b4d643af
 
 ARG HIVEMQ_VERSION
 
-COPY hivemq-${HIVEMQ_VERSION}.zip /opt/hivemq-${HIVEMQ_VERSION}.zip
-RUN unzip /opt/hivemq-${HIVEMQ_VERSION}.zip -d /opt \
+COPY hivemq-${HIVEMQ_VERSION}.zip /tmp/hivemq.zip
+RUN unzip /tmp/hivemq.zip -d /opt \
     && rm -rf /opt/hivemq-${HIVEMQ_VERSION}/tools/hivemq-swarm \
     && chgrp -R 0 /opt \
     && chmod -R 770 /opt
