Rename config-dns.xml -> config.xml

--- a/hivemq4/dns-image/Dockerfile
+++ b/hivemq4/dns-image/Dockerfile
@@ -14,7 +14,7 @@ ENV HIVEMQ_CONTROL_CENTER_USER admin
 ENV HIVEMQ_CONTROL_CENTER_PASSWORD a68fc32fc49fc4d04c63724a1f6d0c90442209c46dba6975774cde5e5149caf8
 ENV HIVEMQ_CLUSTER_TRANSPORT_TYPE UDP
 
-COPY config-dns.xml /opt/hivemq/conf/config.xml
+COPY config.xml /opt/hivemq/conf/config.xml
 COPY 40_dns_entrypoint.sh /docker-entrypoint.d/40_dns_entrypoint.sh
 
 RUN curl -L https://github.com/hivemq/hivemq-dns-cluster-discovery-extension/releases/download/${DNS_DISCOVERY_EXTENSION_VERSION}/hivemq-dns-cluster-discovery-${DNS_DISCOVERY_EXTENSION_VERSION}.zip -o /tmp/hivemq-dns-cluster-discovery-extension.zip \
