Copy 15_k8s_entrypoint.sh directly into right place

--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -23,25 +23,16 @@ ENV HIVEMQ_LOG_LEVEL=INFO\
     HIVEMQ_CLUSTER_TRANSPORT_TYPE=TCP
 
 COPY config.xml /opt/hivemq/conf/config.xml
+COPY 15_k8s_entrypoint.sh /docker-entrypoint.d/15_k8s_entrypoint.sh
 COPY scripts/*.sh /opt/hivemq/bin/
 COPY --from=BUILD /opt/hivemq/extensions/ /opt/hivemq/extensions/
 
-### Move the entrypoint into the correct position & adjust for whether the base image uses entrypoint.d or not
 ### Fix permissions as --chmod on COPY is not really working at the moment and requires buildkit
 RUN chmod +x /opt/hivemq/bin/*.sh \
-    && if [ -d /docker-entrypoint.d ]; then \
-      mv /opt/hivemq/bin/pre-entry_1.sh /docker-entrypoint.d/15_k8s_entrypoint.sh && \
-      ln -s /opt/docker-entrypoint.sh /opt/hivemq/bin/pre-entry_1.sh; \
-    else \
-      echo '# Pass on to DNS entrypoint' >> /opt/hivemq/bin/pre-entry_1.sh && \
-      echo 'exec /opt/pre-entry.sh "$@"' >> /opt/hivemq/bin/pre-entry_1.sh; \
-    fi \
     && chmod -R 770 /opt/hivemq/extensions/hivemq-k8s-sync-extension \
     && chmod -R 770 /opt/hivemq/extensions/hivemq-prometheus-extension \
-    && chmod -R 770 /opt/hivemq/conf/config.xml
+    && chmod 770 /opt/hivemq/conf/config.xml \
+    && chmod 770 /docker-entrypoint.d/15_k8s_entrypoint.sh
 
 LABEL org.opencontainers.image.vendor=HiveMQ\
       org.opencontainers.image.source=https://github.com/hivemq/hivemq4-docker-images
-
-ENTRYPOINT ["/opt/hivemq/bin/pre-entry_1.sh"]
-CMD ["/opt/hivemq/bin/run.sh"]
